log/build_2022-08-04_17-54-40/tele_op/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/nippun/ros2_ws/install/tele_op/lib/python3.10/site-packages/tele_op/key_detect.py", line 39
    	x= 
    	   ^
SyntaxError: invalid syntax

